applications/spark-apps/hello-spark-operator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: hello-spark-operator
  name: hello-spark-operator
  namespace: default
spec:
  rules:
  - host: hello-spark-operator.localhost
    http:
      paths:
      - backend:
          service:
            name: spark-pi-ui-svc
            port:
              number: 4040
        pathType: ImplementationSpecific
